<resources>
    <string name="app_name">TimeToFish Mobile</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register new account</string>
    <string name="error_incorrect_credentials">This username/password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="placeholder_email">john.doe@email.com</string>
    <string name="placeholder_username">JD2000</string>

    <string name="menu_item_trips">Trips</string>
    <string name="menu_item_lists">Lists</string>
    <string name="menu_item_contest">Contest</string>
    <string name="menu_item_schedule">Schedule</string>
    <string name="menu_item_fish_on">Fish On!</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_sign_out">Sign Out</string>
    <string name="menu_item_galleries">Galleries</string>

    <string name="register_form_register_user_btn">Register</string>
    <string name="register_form_get_photo_btn">Get Photo</string>
    <string name="register_form_confirm_password">Confirm Password</string>
    <string name="register_form_password">Password</string>
    <string name="register_form_email">Email</string>
    <string name="register_form_username">Username</string>
    <string name="register_form_last_name">Last Name</string>
    <string name="register_form_middle_name">M.</string>
    <string name="register_form_first_name">First Name</string>
    <string name="register_form_avatar_preview">User avatar</string>
    <string name="error_passwords_must_match">Passwords must match.</string>
    <string name="error_username_unavailable">This username is already taken.</string>
    <string name="title_activity_contest">Contest</string>
</resources>
